<resources>
    <string name="app_version" translatable="false">1.16.0</string>
    <string name="fabEditBook">Edit displayed book</string>
    <string name="ivBookStatusRead">Book is finished</string>
    <string name="ivBookStatusInProgress">Book is in progress</string>
    <string name="ivBookStatusToRead">Book is "to read"</string>
    <string name="fabAddBook">Add a new book</string>
    <string name="ivSeparator1">Separator between search and sort</string>
    <string name="rbRatingIndicator">This book is finished</string>
    <string name="ivInProgressIndicator">This book is in progress</string>
    <string name="ivToReadIndicator">This book is to read</string>
    <string name="ivRepoUrl" translatable="false">https://github.com/mateusz-bak/openreads-android/</string>
    <string name="tvLicenseUrl" translatable="false">https://github.com/mateusz-bak/openreads-android/blob/master/LICENSE</string>
    <string name="readFragment">Finished</string>
    <string name="inProgressFragment">In progress</string>
    <string name="toReadFragment">For later</string>
    <string name="btnAdderSaveBook">Save</string>
    <string name="finished">Finished</string>
    <string name="inProgress">In progress</string>
    <string name="toRead">For later</string>
    <string name="tvBookTitle">Enter a title</string>
    <string name="tvBookAuthor">Enter an author</string>
    <string name="tvBookStatus">Book status</string>
    <string name="etSearch">Search</string>
    <string name="sbWarningAuthor">Fill in the author!</string>
    <string name="sbWarningTitle">Fill in the title!</string>
    <string name="tvSorterTitle">Sort books</string>
    <string name="tvSortTitle">Title</string>
    <string name="tvSortAuthor">Author</string>
    <string name="tvSortRating">Rating</string>
    <string name="notYetImplemented">Not yet implemented</string>
    <string name="bookDeleted">Book deleted</string>
    <string name="undo">Undo</string>
    <string name="tvWelcomeText_0">Welcome to</string>
    <string name="tvWelcomeText_1">"will help you keep track of your books.\n\nIt is also a great tool for organizing your personal library in an easy and transparent way."</string>
    <string name="tvWelcomeText_2">"Progress with your readings thanks to awesome statistics.\n\nChallenge yourself to be a better reader!"</string>
    <string name="tvWelcomeText_3">"is completely open source!\n\nIt means that you can inspect the app's code on your own and contribute to it's development.\n\nAs a bonus you get zero ads and absolutely no tracking!"</string>
    <string name="tvWelcomeText_4">"Now choose a theme color for the app.\n\nDon\'t worry, you can change it later."</string>
    <string name="tvWelcomeText_5">Enjoy and keep reading!</string>
    <string name="tvLooksEmpty">Your book list looks empty for now, click plus button below and start adding new books!</string>
    <string name="customization">Customization</string>
    <string name="about">About</string>
    <string name="app_version_title">App version</string>
    <string name="app_source_code_title">Source code</string>
    <string name="app_changelog">Changelog</string>
    <string name="app_licence_title">Licence</string>
    <string name="app_licence" translatable="false">GNU General Public License v2.0</string>
    <string name="accent_light_green">Grey</string>
    <string name="accent_orange">Orange</string>
    <string name="accent_cyan">Teal</string>
    <string name="accent_green">Green</string>
    <string name="accent_brown">Brown</string>
    <string name="accent_lime">Crimson</string>
    <string name="accent_pink">Pink</string>
    <string name="accent_purple">Purple</string>
    <string name="accent_teal">Blue</string>
    <string name="accent_yellow">Yellow</string>
    <string name="accent_name_title">Accent color</string>
    <string name="first_time_toggle_title">Show welcome screen</string>
    <string name="first_time_toggle_off">Won\'t be shown after app restart</string>
    <string name="first_time_toggle_on">Will be shown after app restart</string>
    <string name="tv_book_pages_title">Pages</string>
    <string name="tv_date_finished" translatable="false">DD/MM/RRR</string>
    <string name="tv_book_pages">Pages number</string>
    <string name="tv_date_finished_title">Date finished</string>
    <string name="tvSortPages">Pages</string>
    <string name="pages">pages</string>
    <string name="space" translatable="false">" "</string>
    <string name="btnAdderSaveFinishDate">Set</string>
    <string name="not_set">Not set</string>
    <string name="tvSortFinishDate">Finish date</string>
    <string name="tvNumberOfPages" translatable="false">101 pages</string>
    <string name="tvDateFinished" translatable="false">13 Jun 2021</string>
    <string name="setTitleOnUpdateAvailable">New update!</string>
    <string name="setContentOnUpdateAvailable_github">"Newer version of the &appname; app is available in Github repository.\n\nClick \"update\"  to go to the downloading page."</string>
    <string name="setContentOnUpdateAvailable_fdroid">"Newer version of the &appname; app is available in F-Droid repository.\n\nClick \"update\"  to go to the downloading page."</string>
    <string name="setButtonUpdate">Update</string>
    <string name="setButtonDismiss">Dismiss</string>
    <string name="setButtonDoNotShowAgain">Ignore</string>
    <string name="setContentOnUpdateNotAvailable_github">You\'ve got the latest version available of &appname; app from Github repository.</string>
    <string name="setContentOnUpdateNotAvailable_fdroid">You\'ve got the latest version available of &appname; app from F-Droid repository.</string>
    <string name="setTitleOnUpdateNotAvailable">No updates available</string>
    <string name="statisticsFragment">Statistics</string>
    <string name="statistics_all">All</string>
    <string name="tvSetupSwipeHint_0">Swipe left</string>
    <string name="tvSetupSwipeHint_1">Click the arrow</string>
    <string name="tvLooksEmptyStatistics">Nothing to see here yet! Add read books with finish date and come back here later.</string>
    <string name="btnAdderCancelFinishDate">Cancel</string>
    <string name="tvChallengeTitle">Challenge</string>
    <string name="tvChallengeEditorTitle">Edit challenge</string>
    <string name="tvChallengeNotSet">None, click to add one!</string>
    <string name="warning_challenge_difficulty_not_set">Choose a difficulty!</string>
    <string name="tvChallengeBooks">books</string>
    <string name="tvFilterTitle">Filter books</string>
    <string name="trash_summary">Deleted books</string>
    <string name="trash_title">Trash</string>
    <string name="ivRestoreBook">Restore deleted book</string>
    <string name="ivDeleteBookPermanently">Delete book permanently</string>
    <string name="btnAddSearch">"Search in\nOpen Library"</string>
    <string name="btnAddManual">"Add\nmanually"</string>
    <string name="etAdderBookTitleSearch">Title, author, isbn...</string>
    <string name="unknown_author">No author</string>
    <string name="language">language</string>
    <string name="language_upperCase">Language</string>
    <string name="button_search">search</string>
    <string name="button_language">filter languages</string>
    <string name="results_1">result</string>
    <string name="results_2_4">results</string>
    <string name="results_5_">results</string>
    <string name="btn_ok">ok</string>
    <string name="cb_dont_show_again">Don\'t show again</string>
    <string name="tvAlertContent1">Searching books uses openlibrary.org database. It is free to use but can have some limitations.</string>
    <string name="tvAlertContent2">You can search for a book’s title and author’s name. Try to be specific, it will be faster.</string>
    <string name="tvAlertContent3">If no results found then try a more broad query (just authors name or one word from the title) but it can take a long time (even a couple of minutes).</string>
    <string name="tvAlertContent4">If book’s title or author’s name contain diactric characters try to use non-diactric characters.</string>
    <string name="tvAlertTitle">Help for searching books</string>
    <string name="tvAlertContent5">Lastly the book you look for might be missing so choose the most similiar one and edit the details to your liking.</string>
    <string name="toast_no_connection_to_OL">Error: no connection to openlibrary.org</string>
    <string name="show_ol_alert_off">Won\'t be shown</string>
    <string name="show_ol_alert_on">Will be shown</string>
    <string name="show_ol_alert_title">Help for searching books</string>
    <string name="tv_date_started_title">Date started</string>
    <string name="tv_book_isbn_title" translatable="false">ISBN</string>
    <string name="tv_book_isbn" translatable="false">1234567890123</string>
    <string name="tv_book_url" translatable="false">https://openlibrary.org/books/OL27755728M</string>
    <string name="sbWarningStartDateMustBeBeforeFinishDate">Finish date cannot be set before starting date</string>
    <string name="toast_no_results_from_OL">No results</string>
    <string name="tvSortStartDate">Start date</string>
    <string name="tv_cover_missing">"Cover missing"</string>
    <string name="set">Set</string>
    <string name="unknown_title">No title</string>
    <string name="unknown_language">No language</string>
    <string name="unknown_isbn">No ISBN</string>
    <string name="warning_delete_book_title">Watch out!</string>
    <string name="warning_delete_book_message">Do you really want to delete this book?</string>
    <string name="warning_delete_book_delete">delete</string>
    <string name="warning_delete_book_cancel">back</string>
    <string name="export_title">Create cloud backup</string>
    <string name="export_summary">Save your books to the cloud so they won\'t go anywhere! You can save the backup file to your cloud app (Nextcloud, Google Drive, OneDrive, Dropbox, Mega, Proton Drive)</string>
    <string name="import_title">Restore backup</string>
    <string name="import_summary">Load your books from a local file on your phone. You may need to grant storage permissions for the app.</string>
    <string name="backup_title">Backup</string>
    <string name="backup_summary">Backup or restore your books</string>
    <string name="backup_success">Success! File saved to: Internal Storage/Android/data/software.mdev.bookstracker/files</string>
    <string name="backup_failure">Backup creation failed!</string>
    <string name="backup_import_invalid_file">Import failed. The chosen file is not a valid &appname; backup!</string>
    <string name="rate_app_title">Rate the app</string>
    <string name="rate_app">Do you like &appname;? Take a moment to rate it!</string>
    <string name="app_market_url" translatable="false">market://details?id=software.mdev.bookstracker</string>
    <string name="contact_title">Send feedback</string>
    <string name="unknown_pages">No number of pages</string>
    <string name="unknown_publish_year">No publish year</string>
    <string name="export_local_summary">Save your books to a local file so you always have the backup handy!</string>
    <string name="export_local_title">Create local backup</string>
    <string name="settings">Settings</string>
    <string name="contact_summary">You found a bug or you have a new feature idea? Contact the author!</string>
    <string name="theme_mode_title">Theme</string>
    <string name="show_tags_toggle_title">Show book tags in lists</string>
    <string name="show_tags_toggle_on">Tags will be shown</string>
    <string name="show_tags_toggle_off">Tags won\'t be shown</string>
    <string name="help_translate_summary">Contribute by translating &appname; to languages you know!</string>
    <string name="help_translate_title">Help translate</string>
    <string name="help_translate_url" translatable="false">https://crwd.in/openreads-android</string>
</resources>