<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_iconscout_rocket_24"
        android:summary="@string/join_matrix_summary"
        android:title="@string/join_matrix_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/elementInvitationUrl" />
    </Preference>

    <PreferenceCategory>
        <Preference
            android:icon="@drawable/ic_iconscout_trash_24"
            android:key="KEY_TRASH"
            android:summary="@string/trash_summary"
            android:title="@string/trash_title" />

        <SwitchPreference
            android:icon="@drawable/ic_iconscout_align_justify_24"
            android:key="KEY_FIRST_TIME_TOGGLE"
            android:summaryOff="@string/first_time_toggle_off"
            android:summaryOn="@string/first_time_toggle_on"
            android:title="@string/first_time_toggle_title" />

        <SwitchPreference
            android:icon="@drawable/ic_iconscout_question_circle_24"
            android:key="KEY_SHOW_OL_ALERT"
            android:summaryOff="@string/show_ol_alert_off"
            android:summaryOn="@string/show_ol_alert_on"
            android:title="@string/show_ol_alert_title" />

        <Preference
            android:icon="@drawable/ic_iconscout_history_24"
            android:key="KEY_BACKUP"
            android:summary="@string/backup_summary"
            android:title="@string/backup_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="customization"
        android:title="@string/customization">

        <SwitchPreference
            android:icon="@drawable/ic_iconscout_tag_alt_24"
            android:key="KEY_SHOW_TAGS"
            android:summaryOff="@string/show_tags_toggle_off"
            android:summaryOn="@string/show_tags_toggle_on"
            android:title="@string/show_tags_toggle_title" />

        <ListPreference
            android:defaultValue="accent_green"
            android:entries="@array/accents"
            android:entryValues="@array/accent_values"
            android:key="KEY_ACCENT"
            android:summary="%s"
            android:title="@string/accent_name_title"
            app:icon="@drawable/ic_iconscout_brush_alt_24" />

        <ListPreference
            android:defaultValue="theme_mode_auto"
            android:entries="@array/theme_modes"
            android:entryValues="@array/theme_modes_values"
            android:key="KEY_THEME_MODE"
            android:summary="%s"
            android:title="@string/theme_mode_title"
            app:icon="@drawable/ic_iconscout_sun_24" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="about"
        android:title="@string/about">

        <Preference
            android:key="KEY_CHECK_FOR_UPDATES"
            android:summary="@string/app_version"
            android:title="@string/app_version_title"
            app:icon="@drawable/ic_iconscout_info_circle_24" />

        <Preference
            android:icon="@drawable/ic_iconscout_brackets_curly_24"
            android:title="@string/app_source_code_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/ivRepoUrl" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_iconscout_code_branch_24"
            android:title="@string/app_changelog">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/latestReleaseUrl" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_iconscout_copyright_24"
            android:summary="@string/app_licence"
            android:title="@string/app_licence_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/tvLicenseUrl" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_iconscout_star_24"
            android:summary="@string/rate_app"
            android:title="@string/rate_app_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_market_url" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_iconscout_grin_24"
            android:key="KEY_FEEDBACK"
            android:summary="@string/contact_summary"
            android:title="@string/contact_title" />

        <Preference
            android:icon="@drawable/ic_iconscout_language_24"
            android:summary="@string/help_translate_summary"
            android:title="@string/help_translate_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/help_translate_url" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>