<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvAlertTitle"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAlertContent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:justificationMode="inter_word"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/tvAlertContent1"
        android:textColor="?colorOnSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertTitle" />

    <TextView
        android:id="@+id/tvAlertContent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:justificationMode="inter_word"
        android:text="@string/tvAlertContent2"
        android:textColor="?colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertContent1" />

    <TextView
        android:id="@+id/tvAlertContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:justificationMode="inter_word"
        android:text="@string/tvAlertContent3"
        android:textColor="?colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertContent2" />

    <TextView
        android:id="@+id/tvAlertContent4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:justificationMode="inter_word"
        android:text="@string/tvAlertContent4"
        android:textColor="?colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertContent3" />

    <TextView
        android:id="@+id/tvAlertContent5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:justificationMode="inter_word"
        android:text="@string/tvAlertContent5"
        android:textColor="?colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertContent4" />

    <CheckBox
        android:id="@+id/cbDontShowAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/cb_dont_show_again"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertContent5" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorPrimary"
        android:text="@string/btn_ok"
        app:cornerRadius="@dimen/text_input_layout_radius"
        android:textColor="@color/colorDefaultText"
        app:layout_constraintBottom_toBottomOf="@+id/cbDontShowAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbDontShowAgain"
        app:layout_constraintTop_toTopOf="@+id/cbDontShowAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>