<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/brown_400"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_brown"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/cyan_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_cyan"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/green_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_green"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/light_green"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_light_green"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lime_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_lime"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toEndOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/pink_300"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_pink"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="@+id/btn4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/purple_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_purple"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/orange_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_orange"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/teal_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_teal"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/yellow_500"
        android:textSize="12sp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/accent_yellow"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn9" />
</androidx.constraintlayout.widget.ConstraintLayout>